multi thread and no parseDouble